--- a/html/title.html
+++ b/html/title.html
@@ -11,4 +11,6 @@
         <img id="random-match" src="../image/RandomMatch.png">
         <img id="room-match" src="../image/RoomMatch.png">
     </body>
+
+    <script type="text/javascript" src="../javascript/title.js"></script>
 </html>
