--- a/html/title.html
+++ b/html/title.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <img id="random-match" src="../image/RandomMatch.png">
+        <img id="random-match" src="../image/RandomMatch.png" onclick="create_user()">
         <img id="room-match" src="../image/RoomMatch.png">
     </body>
 
