マッチング完了後、ゲームプレイ画面に飛ぶよう更新、ゲームプレイシーンに必要なものの用意（途中） #6 #10

--- a/html/gameroom.html
+++ b/html/gameroom.html
@@ -6,7 +6,16 @@
     </head>
 
     <body>
-        
-        ゲーム
+        <div id = treasure_box>
+            <img id="box1" src="../image/TreasureBox_Close.png" onclick="choice_box()">
+            <img id="box2" src="../image/TreasureBox_Close.png" onclick="choice_box()">
+            <img id="box3" src="../image/TreasureBox_Close.png" onclick="choice_box()">
+            <img id="box4" src="../image/TreasureBox_Close.png" onclick="choice_box()">
+            <img id="box5" src="../image/TreasureBox_Close.png" onclick="choice_box()">
+            <img id="box6" src="../image/TreasureBox_Close.png" onclick="choice_box()">
+            <img id="box7" src="../image/TreasureBox_Close.png" onclick="choice_box()">
+            <img id="box8" src="../image/TreasureBox_Close.png" onclick="choice_box()">
+            <img id="box9" src="../image/TreasureBox_Close.png" onclick="choice_box()">
+        </div>
     </body>
 </html>
