ゲーム部分作成（途中） #6 #7 #8 #10 #11 #12 #13 #16

--- a/html/gameroom.html
+++ b/html/gameroom.html
@@ -2,20 +2,50 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../css/gameroom.css">
         <title>ゲーム</title>
     </head>
 
     <body>
         <div id = treasure_box>
-            <img id="box1" src="../image/TreasureBox_Close.png" onclick="choice_box()">
-            <img id="box2" src="../image/TreasureBox_Close.png" onclick="choice_box()">
-            <img id="box3" src="../image/TreasureBox_Close.png" onclick="choice_box()">
-            <img id="box4" src="../image/TreasureBox_Close.png" onclick="choice_box()">
-            <img id="box5" src="../image/TreasureBox_Close.png" onclick="choice_box()">
-            <img id="box6" src="../image/TreasureBox_Close.png" onclick="choice_box()">
-            <img id="box7" src="../image/TreasureBox_Close.png" onclick="choice_box()">
-            <img id="box8" src="../image/TreasureBox_Close.png" onclick="choice_box()">
-            <img id="box9" src="../image/TreasureBox_Close.png" onclick="choice_box()">
+            <div id="box1_ui">
+                <img id="box1_choice" src="../image/TreasureBox_Choice.png">
+                <img id="box1" src="../image/TreasureBox_Close.png" onclick="choice_box(1)">
+            </div>
+            <div id="box2_ui">
+                <img id="box2_choice" src="../image/TreasureBox_Choice.png">
+                <img id="box2" src="../image/TreasureBox_Close.png" onclick="choice_box(2)">
+            </div>
+            <div id="box3_ui">
+                <img id="box3_choice" src="../image/TreasureBox_Choice.png">
+                <img id="box3" src="../image/TreasureBox_Close.png" onclick="choice_box(3)">
+            </div>
+            <div id="box4_ui">
+                <img id="box4_choice" src="../image/TreasureBox_Choice.png">
+                <img id="box4" src="../image/TreasureBox_Close.png" onclick="choice_box(4)">
+            </div>
+            <div id="box5_ui">
+                <img id="box5_choice" src="../image/TreasureBox_Choice.png">
+                <img id="box5" src="../image/TreasureBox_Close.png" onclick="choice_box(5)">
+            </div>
+            <div id="box6_ui">
+                <img id="box6_choice" src="../image/TreasureBox_Choice.png">
+                <img id="box6" src="../image/TreasureBox_Close.png" onclick="choice_box(6)">
+            </div>
+            <div id="box7_ui">
+                <img id="box7_choice" src="../image/TreasureBox_Choice.png">
+                <img id="box7" src="../image/TreasureBox_Close.png" onclick="choice_box(7)">
+            </div>
+            <div id="box8_ui">
+                <img id="box8_choice" src="../image/TreasureBox_Choice.png">
+                <img id="box8" src="../image/TreasureBox_Close.png" onclick="choice_box(8)">
+            </div>
+            <div id="box9_ui">
+                <img id="box9_choice" src="../image/TreasureBox_Choice.png">
+                <img id="box9" src="../image/TreasureBox_Close.png" onclick="choice_box(9)">
+            </div>
         </div>
     </body>
+
+    <script type="text/javascript" src="../javascript/game_play.js"></script>
 </html>
