--- a/html/title.html
+++ b/html/title.html
@@ -10,6 +10,10 @@
     <body>
         <img id="random-match" src="../image/RandomMatch.png" onclick="create_user()">
         <img id="room-match" src="../image/RoomMatch.png">
+        <img id="fade" src="../image/Fade.png">
+        <div id="matching">
+            <img id="matching-ui" src="../image/Matching_ui.png">
+        </div>
     </body>
 
     <script type="text/javascript" src="../javascript/title.js"></script>
