--- a/html/gameroom.html
+++ b/html/gameroom.html
@@ -45,6 +45,18 @@
                 <img id="box9" src="../image/TreasureBox_Close.png" onclick="choice_box(9)">
             </div>
         </div>
+        <img id="fade" src="../image/Fade.png">
+        <img id="turn_player" src="">
+        <img id="turn_text" src="../image/Turn_ui.png">
+        <div id="s_or_h">
+            <img id="search_or_hide" src="">
+        </div>
+        <div id="etc">
+            <img id="text_ui" src="">
+        </div>
+        <div id="return_title">
+            <img id="return_title_button" src="../image/Return_title_icon.png" onclick="return_title()">
+        </div>
     </body>
 
     <script type="text/javascript" src="../javascript/game_play.js"></script>
