--- a/html/title.html
+++ b/html/title.html
@@ -8,8 +8,12 @@
     </head>
 
     <body>
-        <img id="random-match" src="../image/RandomMatch.png" onclick="create_user()">
-        <img id="room-match" src="../image/RoomMatch.png">
+        <div id="title">
+            <img id="title-icon" src="../image/title.png">
+        </div>
+        <div id="match-icon">
+            <img id="random-match" src="../image/RandomMatch.png" onclick="create_user()">
+        </div>
         <img id="fade" src="../image/Fade.png">
         <div id="matching">
             <img id="matching-ui" src="../image/Matching_ui.png">
